--- a/web2-2.html
+++ b/web2-2.html
@@ -8,6 +8,31 @@
       <h1>
         課題だよおおおお
       </h1>
-        <p><a href = "http://www.t-kougei.ac.jp/index.html">東京工芸大学のホームページ</a>へのリンクです。</p>
+      <p>
+          <a href = "http://www.t-kougei.ac.jp/index.html">東京工芸大学のホームページ</a>へのリンクです。
+      </p>
+      <ul>
+          <li>
+              リスト予定地1
+          </li>
+          <li>
+              リスト予定地2
+          </li>
+          <ul>
+              <li>
+                  入れ子1
+              </li>
+              <li>
+                  入れ子1
+              </li>
+          </ul>
+       </ul>
+       <h1>
+           装飾
+       </h1>
+       <p>
+           <mark>装飾</mark>を試したいと<br><strong>思います。</strong>
+       </p>
+       
     </body>
 </html>
